# logistics-adk-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/agent/: agent.py  config.py  main.py
backend/agent/models/: domain.py
backend/agent/providers/: base.py  factory.py  http_provider.py  mock_provider.py
backend/agent/services/: logistics_service.py
backend/agent/tools/: _common.py  order_tools.py  pricing_tools.py  tracking_tools.py
backend/alembic/: env.py
backend/alembic/versions/: a1b2c3d4e5f6_add_state_json_to_chat_sessions.py  b2c3d4e5f6a7_add_artifacts_table.py  c3d4e5f6a7b8_add_message_id_to_artifacts.py  dd53b1a6c0c6_initial_tables.py
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/auth/: dependencies.py  router.py  security.py
backend/app/chat/: adk_runner.py  db_artifact_service.py  router.py
backend/tests/: test_domain_validation.py  test_logistics_service.py  test_state_management.py  test_tools.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: AuthForm.tsx  ChatInput.tsx  ChatMessageList.tsx
frontend/src/hooks/: useTypewriter.ts
frontend/src/lib/: api.ts  auth.ts
frontend/src/types/: index.ts
logistics_agent/: agent.py  config.py  main.py
logistics_agent/models/: domain.py
logistics_agent/providers/: base.py  factory.py  http_provider.py  mock_provider.py
logistics_agent/services/: logistics_service.py
logistics_agent/tools/: _common.py  logistics_tools.py  order_tools.py  pricing_tools.py  tracking_tools.py
logistics_agent/utils/: presenters.py
tests/: test_domain_validation.py  test_logistics_service.py  test_tools.py
