[project]
name = "logistics-adk-agent"
version = "0.3.0"
description = "A Google ADK multi-agent system for cross-border logistics operations"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Candidate Submission" }]
dependencies = [
  "google-adk>=1.18.0",
  "httpx>=0.27.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["logistics_agent*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
ignore_missing_imports = true
strict = false
